# asset-aware-mcp

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  README.md  README.zh-TW.md  ROADMAP.md  a2t_spec.md  pyproject.toml
.claude/skills/mcp-operator/: SKILL.md
.claude/skills/pdf-asset-extractor/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE_REFACTOR_PROPOSAL.md  spec.md
memory-bank/: activeContext.md  architect.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md
scripts/: release.sh
src/: __init__.py  server.py
src/application/: __init__.py  asset_service.py  document_service.py  job_service.py  knowledge_service.py  table_service.py
src/domain/: __init__.py  chunking.py  entities.py  image_processor.py  job.py  repositories.py  services.py  table_entities.py  value_objects.py
src/infrastructure/: __init__.py  config.py  docling_adapter.py  excel_renderer.py  file_storage.py  job_store.py  lightrag_adapter.py  pdf_extractor.py
src/presentation/: __init__.py  server.py
tests/: __init__.py  conftest.py  debug_lightrag.py  e2e_test_pdf.py  test_mcp_tools.py
tests/integration/: test_document_service.py  test_lightrag_ollama.py
tests/unit/: test_chunking.py  test_entities.py  test_file_storage.py  test_services.py  test_table_service.py  test_value_objects.py
vscode-extension/: .gitignore  .vscodeignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
vscode-extension/resources/walkthrough/: configure.md  setup.md  start.md
vscode-extension/src/: documentTreeProvider.ts  envManager.ts  extension.ts  mcpProvider.ts  settingsPanel.ts  statusBar.ts  statusTreeProvider.ts  tableTreeProvider.ts
vscode-extension/src/test/: runTest.ts
vscode-extension/src/test/suite/: extension.test.ts  index.ts
