[project]
name = "asset-aware-mcp"
version = "0.1.0"
description = "Medical RAG with Asset-Aware MCP - 讓 AI Agent 精準存取 PDF 文獻中的表格、章節與知識圖譜"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "u9401066", email = "u9401066@gap.kmu.edu.tw" }
]
keywords = ["mcp", "rag", "medical", "pdf", "lightrag", "fastmcp"]

dependencies = [
    # MCP Server
    "mcp>=1.0.0",
    # PDF Processing
    "PyMuPDF>=1.24.0",           # 圖片提取 + 頁碼
    # RAG
    "lightrag-hku>=1.0.0",       # Knowledge Graph
    # Mistral OCR (可選，需要 API Key)
    "mistralai>=1.0.0",
    # Utilities
    "pydantic>=2.0.0",           # Data validation
    "aiofiles>=24.0.0",          # Async file I/O
    "python-dotenv>=1.0.0",      # Environment variables
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
asset-aware-mcp = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short", "-ra"]
